# ollama.vip

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  check_translations_final.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
docs/en/: AI-Model.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LOCAL_MODEL_FIXES.md  SYSTEM_MONITORING_IMPLEMENTATION.md  TAURI_WINDOW_EFFECTS.md  UBUNTU22_COMPATIBILITY.md
docs/fr/: README.md
docs/ja/: README.md
docs/ko/: README.md
docs/zh/: API_IMPLEMENTATION_SUMMARY.md  CODE_AUDIT_REPORT.md  DEVELOPMENT_GUIDE.md  FRONTEND_ARCHITECTURE_OPTIMIZATION_REPORT.md  GITHUB_ACTIONS_CONFIG.md  LOCAL_MODEL_MANAGEMENT.md  MODEL_DOWNLOAD_IMPROVEMENTS.md  MULTI_ARCH_BUILD.md  OLLAMA_CONFIG_MANAGEMENT.md  OPTIMIZATION_REPORT.md  PROJECT_OPTIMIZATION_FINAL_REPORT.md  README.md  SHORT_TERM_OPTIMIZATION_SUMMARY.md  STAGE_FOUR_DEVELOPMENT_EXPERIENCE.md  STAGE_THREE_STYLE_SYSTEM.md  SYSTEM_DASHBOARD_IMPROVEMENTS.md  SYSTEM_MONITORING_UPDATES.md  build.md  markdown-showcase.md
scripts/: build-ubuntu22.sh  check-ubuntu22-compat.sh  release.ps1  setup-ubuntu22-arm64.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  main.rs  ollama_api.rs  system_monitor.rs
src/components/: AISettings.tsx  AuthDialog.tsx  ChatInput.tsx  ChatMessage.tsx  DownloadProgress.tsx  ErrorBoundary.tsx  GradientBackground.tsx  LocalModelManager.tsx  MarkdownRenderer.tsx  MessageList.tsx  ModelManager.tsx  ModelSelector.tsx  ProfileCard.tsx  Toolbar.tsx  TypingIndicator.tsx  WindowControls.tsx
src/components/chat/: ChatApiKeyWarning.tsx  ChatHeader.tsx  ChatMessages.tsx  index.ts
src/components/dashboard/: ActivityLogAndActions.tsx  LogsDialog.tsx  ModelOverview.tsx  OllamaServiceStatus.tsx  SystemResourceMonitoring.tsx
src/components/dialogs/: ImagePreviewDialog.tsx  LocalModelInfoDialog.tsx
src/components/layouts/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx  index.ts
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  breadcrumb.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  custom-select.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  slider.tsx  toast.tsx  toggle-group.tsx  toggle.tsx
src/config/: apiConfig.ts
src/contexts/: ThemeContext.tsx
src/hooks/: index.ts  useChat.ts  useDownloadManager.ts  useModelSelection.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  fr.json  ja.json  ko.json  zh.json
src/pages/: Chat.tsx  Downloads.tsx  General.tsx  LocalModels.tsx  ModelDetail.tsx  Models.tsx  NotFound.tsx
src/services/: BaseService.ts  aiApi.ts  configApi.ts  modelDetailApi.ts  modelService.ts  ollamaApi.ts  ollamaTauriApi.ts  systemApi.ts
src/stores/: authStore.ts  chatStore.enhanced.ts  chatStore.ts  downloadStore.ts  middleware.ts  modelStore.ts  systemResourceStore.ts
src/styles/: animations.css  components.css  markdown.css  scrollbar-unified.css  scrollbar.css  theme.css  titlebar.css  utilities.css
src/test/: setup.ts
src/types/: ai.ts  chat.ts  common.ts  system.ts
src/utils/: dataUtils.ts  dateUtils.ts  devTools.ts  errorHandler.ts  imageUtils.ts  modelUtils.ts  ollamaApiExample.ts  performanceUtils.ts  test-optimization.ts  testApiConfig.ts
src/utils/__tests__/: dataUtils.test.ts  devTools.test.ts  performanceUtils.test.ts
test/: Cargo.toml
test/src/: main.rs
