[package]
name = "Test"
version = "0.1.0"
edition = "2021"

[dependencies]
# 系统信息
sysinfo = { version = "0.29.11", features = ["serde"] }
num_cpus = "1.16.0"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"

# GPU 通用信息
gfxinfo = { version = "0.1.2", default-features = false, features = ["gpu_info", "nvidia", "amd"] }

# NVIDIA NVML
nvml-wrapper = "0.11"

# 条件编译
cfg-if = "1.0"

# 错误处理
anyhow = "1.0.75"

[features]
# 默认启用 GPU 信息收集
default = ["gpu_info"]

# gfxinfo 对应的 feature
gpu_info = ["gfxinfo/gpu_info"]
nvidia    = ["gfxinfo/nvidia"]
amd       = ["gfxinfo/amd"]
intel     = ["gfxinfo/intel"]
