[package]
name = "Test"
version = "0.1.0"
edition = "2021"

[dependencies]
# System information
sysinfo = { version = "0.29.11", features = ["serde"] }
num_cpus = "1.16.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.67"

# GPU general information
gfxinfo = { version = "0.1.2", default-features = false, features = ["gpu_info", "nvidia", "amd"] }

# NVIDIA NVML
nvml-wrapper = "0.11"

# Conditional compilation
cfg-if = "1.0"

# Error handling
anyhow = "1.0.75"

[features]
# Enable GPU information collection by default
default = ["gpu_info"]

# Features corresponding to gfxinfo
gpu_info = ["gfxinfo/gpu_info"]
nvidia    = ["gfxinfo/nvidia"]
amd       = ["gfxinfo/amd"]
intel     = ["gfxinfo/intel"]
